--- a/Intro.vcxproj.filters
+++ b/Intro.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="glad.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Model\Bunny.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="tiny_obj_loader.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Model\Bunny.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
